--- a/templates/base/includes/sidebar.html
+++ b/templates/base/includes/sidebar.html
@@ -41,6 +41,15 @@
         <li class="{% active_link 'active' %}">
           <a href="{% url 'show_income' %} "><i class="fas fa-holly-berry"></i><span>Show Income</span></a>
         </li>
+        <li class="{% active_link 'active' %}">
+          <a href="{% url 'expense_category' %} "><i class="fas fa-holly-berry"></i><span>Expense category</span></a>
+        </li>
+        <li class="{% active_link 'active' %}">
+          <a href="{% url 'expense' %} "><i class="fas fa-holly-berry"></i><span>Expense</span></a>
+        </li>
+        <li class="{% active_link 'active' %}">
+          <a href="{% url 'show_expense' %} "><i class="fas fa-holly-berry"></i><span>Show_Expense</span></a>
+        </li>
         
       </ul>
     </div>
