--- a/templates/show_income.html
+++ b/templates/show_income.html
@@ -78,6 +78,7 @@
 
                 {% if income_data %}
                     <h3>Total Income for {{ category|title }}: ₹{{ total_income }}</h3>
+                    <h2>Total_expense: ₹{{ total_ex }}</h2>
                     <h2>Final Income from All Sources: ₹{{ final_income }}</h2>
                 {% else %}
                     <p>No income data available.</p>
