--- a/templates/base/includes/sidebar.html
+++ b/templates/base/includes/sidebar.html
@@ -50,6 +50,15 @@
         <li class="{% active_link 'active' %}">
           <a href="{% url 'show_expense' %} "><i class="fas fa-holly-berry"></i><span>Show_Expense</span></a>
         </li>
+        <li class="{% active_link 'active' %}">
+          <a href="{% url 'booking_list' %} "><i class="fas fa-holly-berry"></i><span>Ground Booking payment</span></a>
+        </li>
+        <li class="{% active_link 'active' %}">
+          <a href="{% url 'payment' %} "><i class="fas fa-holly-berry"></i><span>Make_payment</span></a>
+        </li>
+        <li class="{% active_link 'active' %}">
+          <a href="{% url 'payment_status' %} "><i class="fas fa-holly-berry"></i><span>Payment_status</span></a>
+        </li>
         
       </ul>
     </div>
