--- a/templates/booking/cancel_booking.html
+++ b/templates/booking/cancel_booking.html
@@ -1,17 +1,21 @@
 {% extends 'base/base.html' %}
-{% block content  %}
+{% block content %}
 <div class="card card-table">
   <div class="card-body">
     <div class="table-responsive">
-      <form action="" method="post">
+      <h1>Cancel Booking</h1>
+
+      <p>Are you sure you want to cancel your booking for the following:</p>
+      <p><strong>Ground:</strong> {{ booking.ground.name }}</p>
+      <p><strong>Start Date:</strong> {{ booking.start_booking_date }}</p>
+      <p><strong>End Date:</strong> {{ booking.end_booking_date }}</p>
+      <p><strong>Total Amount:</strong> ${{ booking.total_amount }}</p>
+
+      <form method="POST">
         {% csrf_token %}
-        <div>
-          <label>Enter Booking Id Below</label><br>
-          <input type="text" name="booking_id" class="mt-3 mb-3">
-        </div>
-        <button type="submit" class="btn btn-primary">Cancel Booking</button>
+        <button type="submit">Yes, Cancel Booking</button>
       </form>
     </div>
-  </div>  
+  </div>
 </div>
 {% endblock %}
